refactor: RA-129 newVirtualThreadPerTaskExecutor changed to newFixedThreadPool